#200408 hive, hive on tez, mysql